allow native compilation